src/less/blocks/tag_icon.less
/*
 This file is a part of libertysoil.org website
 Copyright (C) 2015  Loki Education (Social Enterprise)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Affero General Public License for more details.

 You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
.tag_icon {
  display: inline-block;
  width: 23px;
  height: 23px;
  color: white;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 13px;
  line-height: 23px;
  text-align: center;

  &-small {
    width: 18px;
    height: 18px;
    line-height: 18px;
  }

  &-big {
    width: 36px;
    height: 36px;
    line-height: 36px;
    font-size: 22px;
  }

  &-hashtag {
    background-color: #689ACA;
  }

  &-school {
    background-color: #DC3457;
  }

  &-event {
    background-color: #98C646;
  }

  &-mention {
    background-color: #F8A232;
  }

  &-location {
    background-color: #47B8E7;
  }

  &-planet {
    background-color: #47B8E7;
  }

  &-inactive {
    background-color: #d0d0d0;
  }

}

